@@ -514,6 +514,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Fixed <code>UnicodeDecodeError: 'ascii' codec can&#8217;t decode byte 0xe2 in position 487: ordinal not in range(128)</code>  in #139</p>
 </li>
+<li>
+<p>fixed #135 css colors</p>
+</li>
+<li>
+<p>fixed #137 cleared up documentation</p>
+</li>
+<li>
+<p>added #132 tabs detach + goto (outliner based). Only works if chrome keeps the <code>openerTabId</code>.</p>
+</li>
 </ol>
 </div>
 </div>
