@@ -764,11 +764,11 @@ map <span class="tok-k">x</span> mouselessCommandName</code></pre>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">reloadAllTabs</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">reload all tabs</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">reload all tabs in all windows</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">reloadAllButCurrent</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">reload all tabs but current</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">reload all tabs in current window</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">nextTab</p></td>
@@ -821,6 +821,14 @@ map <span class="tok-k">x</span> mouselessCommandName</code></pre>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">myCloseTabsLeft</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">close tabs on the left of the current tab</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">tabDetachWithChildren</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">detach tab and its children recursively (tabs created from that tab)</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">tabGoToParent</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">go to parent tab (tab that created this child)</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">markMergeTab</p></td>
